tests/machine/x/zig/map_literal_dynamic.error
Error on line 11: zig build error: exit status 1
/workspace/mochi/tests/machine/x/zig/map_literal_dynamic.zig:11:13: error: local variable shadows declaration of 'm'
/workspace/mochi/tests/machine/x/zig/map_literal_dynamic.zig:5:1: note: declared here

10:     m = blk0: {
11:         var m = std.AutoHashMap([]const u8, i32).init(std.heap.page_allocator);
12:         m.put("a", x) catch unreachable;
